# poc-machine-law

./: .gitignore  .gitlab-ci.yml  .golangci.yaml  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  dev.Dockerfile  engine.py  explainer.py  go.work  go.work.sum  legal_basis_format.md  logging_config.py  main.py  pyproject.toml  run_simulation.py  schema.json  service.py  services.yaml  simulate.py  simulation_results.csv  skaffold.yaml  test_parameter_override.py  test_scenarios.py  utils.py
Coding lessons/: GHERKIN_TEST_TEMPLATE.md  INTEGRATION_WORKFLOW_GUIDE.md  PYTHON_STEPS_GUIDE.md  README.md  YAML_LAW_TEMPLATE.md
claims/: aggregate.py  application.py
doc/: architecture.md
explain/: base_llm_service.py  claude_service.py  llm_factory.py  llm_service.py  mcp_claims.py  mcp_connector.py  mcp_exceptions.py  mcp_formatter.py  mcp_logging.py  mcp_service_executor.py  mcp_services.py  mcp_types.py  vlam_service.py
features/: aanvragen_beoordelen.feature  aow.feature  avg_gegevensdeling.feature  bijstand.feature  environment.py  go.mod  go.sum  godogs_test.go  huurtoeslag.feature  inkomstenbelasting.feature  kieswet.feature  kinderopvangtoeslag.feature  law  wijziging.feature  zorgtoeslag-2024.feature  zorgtoeslag-2025.feature  zorgtoeslag.feature
importer/: Makefile  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
lac-to-regelspraak/: go.mod  go.sum  input.md  input.yaml  main.go  parser.go
machine/: context.py  engine.py  logging_config.py  service.py  (+1 more)
machine-v3/: go.mod  main.go
(+814 files in other folders)
