[project]
name = "poc-machine-law"
version = "0.1.0"
description = "Proof of Concept - Machine Law"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "behave>=1.2.6",
    "httpx>=0.28.1",
    "jsonschema>=4.23.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
