[project]
name = "poc-machine-law"
version = "0.1.0"
description = "Proof of Concept - Machine Law"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "anthropic>=0.45.2",
    "behave>=1.2.6",
    "eventsourcing>=9.3.5",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "jsonschema>=4.23.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.5",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["features/steps/steps.py", "script"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["I", "SIM", "UP", "F", "LOG", "PIE", "PT", "W"]
fixable = ["ALL"]
task-tags = ["TODO"]
ignore = ["TRY003"]
